Fixes issues #1150 and #1148 . These unit tests were failing due to a recent change to our styles. There were three failing tests that this change fixes:
-The ListView test EnsureVisibleHeaderFullyVisibleGroupPartiallyOffscreen was failing because some font styles were updated and made the group header used in the test large enough that it was not fully visible on screen. This commit fixes this test by adding CSS styles to force the elements to use their old sizes instead of letting the content determine the size of the containers.

-The TimePicker test AccessibilityAttributeVerification was failing because the style update added a new class "win-dropdown" to the TimePicker's select elements. The test did an exact string comparison for all classes it expected to find, so when win-dropdown was added, these checks failed. This has been changed to use element.classList.contains, instead of using exact string comparisons

-The TimePicker test redlines2 was failing because WinJS's stylesheet was updated to apply dropdown styles to elements with the classname "win-dropdown", rather than to any select tag. This test was comparing the styles of a basic select tag to the TimePicker's select elements, but failed because the select element used for comparisons hadn't been modified to have the CSS class win-dropdown

--- a/tests/TestData/ListView.less
+++ b/tests/TestData/ListView.less
@@ -478,4 +478,21 @@
         margin: 0;
         height: 50px;
     }
+
+    #EnsureVisibleHeaderTest {
+        width: 450px;
+        height: 100px;
+    }
+    #EnsureVisibleHeaderTest .win-container {
+        width: 61px;
+        height: 20px;
+        margin: 0;
+    }
+    #EnsureVisibleHeaderTest .win-groupheadercontainer {
+        margin-left: 70px;
+    }
+    #EnsureVisibleHeaderTest .win-groupheader {
+        width: 152px;
+        height: 40px;
+    }
 }
